Added Hero and Header

--- a/style.scss
+++ b/style.scss
@@ -1,10 +1,12 @@
 :root {
     --hex-primary: #0F172A;
     --hex-secondary: #EAB308;
+    --hex-accent: #ff00bf;
     --hex-white: #fff;
-    --hex-black: #333;
+    --hex-black: #000;
     --rgb-primary: 15, 23, 42;
     --rgb-secondary: 234, 179, 8;
+    --rgb-accent: 255, 0, 191;
     --rgb-white: 255,255,255;
     --rgb-black: 0,0,0;
 }
@@ -13,7 +15,7 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    cursor: pointer;
+    transition: all 0.3s ease-in-out;
 }
 
 html {
@@ -23,17 +25,13 @@ html {
 }
 
 body {
-    display: flex;
-    align-items: center;
-    color: rgba(var(--rgb-white), 0.8);
+    color: rgba(var(--rgb-white), 1);
     font-family: 'Inter', sans-serif;
     font-size: 14px;
     font-weight: 200;
     line-height: 1.4em;
-    letter-spacing: 0.05em;
-    background-color: var(--hex-primary);
-    height: 100vh;
-    overflow: hidden;
+    background-color: rgba(var(--rgb-primary), 1);
+    user-select: none;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -42,182 +40,227 @@ h1, h2, h3, h4, h5, h6 {
     margin-bottom: 0.5em;
 }
 
+a {
+    color: rgba(var(--rgb-white), 1);
+    text-decoration: none;
+}
+
+.preloader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    justify-content: center;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(var(--rgb-primary), 1);
+    z-index: 999999999999;
+    transition: all 1.5s ease-in-out;
+    cursor: wait;
+    img {
+        display: block;
+    }
+}
+.preloader.fadeOut {
+    opacity: 0;
+}
+.preloader.hide {
+    display: none;
+}
+
 .gradient-bg {
     position: fixed;
+    top: 0;
+    left: 0;
     width: 100vw;
     height: 100vh;
     z-index: 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    .gradient-1,
-    .gradient-2,
-    .gradient-3 {
-        display: block;
-        width: 50vw;
-        height: 50vh;
-        border-radius: 50%;
-        opacity: 0.7;
-    }
-    .gradient-1 {
-        background-image: linear-gradient(#EAB308, #b92594);
-        filter: blur(150px);
-        transform: translateY(120px);
-    }
-    .gradient-2 {
-        background-image: linear-gradient(225deg,#a23fff, #ff3954);
-        filter: blur(200px);
-    }
-    .gradient-3 {
-        background-image: linear-gradient(#0e1eff, #1fff0b);
-        filter: blur(150px);
-        transform: translateY(-120px);
-    }
+    background-image: linear-gradient(45deg, rgb(51, 10, 235), rgba(255, 0, 191, 0.3));
+    opacity: 0.4;
 }
 
-#main-wrapper {
-    position: fixed;
+.wrapper {
+    position: relative;
+    width: 90%;
+    max-width: 1080px;
+    margin: 0 auto;
+    z-index: 9;
+}
+
+header {
+    background-color: rgba(var(--rgb-primary), 0.5);
+    border: 1px solid rgba(var(--rgb-white), 0.1);
+    border-radius: 10px;
+    padding: 20px;
+    margin-top: 20px;
     display: flex;
     align-items: center;
-    justify-content: center;
-    width: 100vw;
-    max-height: 100vh;
-    z-index: 9;
-    margin: auto 0;
-    padding: 2.5%;
-
-    .profile {
-        background-color: rgba(var(--rgb-primary), 0.3);
-        width: auto;
-        margin: 0 auto;
-        box-shadow: 0 0 50px rgba(var(--rgb-black), 0.3);
-        border: 1px solid rgba(var(--rgb-white), 0.1);
-        overflow: hidden;
-        header {
+    justify-content: flex-start;
+    .logo {
+        padding-right: 20px;
+        a, img {
+            display: block;
+        }
+        img {
+            width: 20px;
+            height: 20px;
+        }
+    }
+    nav {
+        display: inline-flex;
+        ul {
             display: flex;
-            justify-content: space-between;
-            border-bottom: 1px solid rgba(var(--rgb-white), 0.05);
-        
-            .social {
-                display: flex;
-                align-items: center;
-                justify-content: space-between;
-                padding: 10px;
-                margin-left: auto;
+            gap: 20px;
+            li {
+                list-style: none;
                 a {
-                    margin: 0 5px;
-                    img {
-                        display: block;
-                        transition: all 0.1s ease-in-out;
-                        &:hover {
-                            transform: scale(1.3);
-                        }
-                    }
-                }
-            }
-        
-            .account {
-                display: flex;
-                align-items: center;
-                gap: 10px;
-                padding: 10px;
-                pointer-events: none;
-        
-                img {
-                    display: block;
-                    width: 18px;
-                }
-
-                .profile-name {
-                    h1 {
-                        font-size: 12px;
-                        font-weight: 400;
-                        margin-bottom: 0;
-                        line-height: 1.4em;
-                    }
-                    p {
-                        font-weight: 200;
-                        font-size: 10px;
-                        line-height: 1.2em;
+                    color: rgba(var(--rgb-white), 1);
+                    font-weight: 400;
+                    &:hover {
+                        color: rgba(var(--rgb-secondary), 1);
                     }
                 }
             }
         }
-        
-        #content {
-            width: 100%;
-            height: calc(100% - 36px);
-            #sidebar {
-                width: 480px;
-                height: 100%;
-                
-                .sub-content {
-                    padding: 10px;
-                    border-bottom: 1px solid rgba(var(--rgb-white), 0.05);
-                    h2 {
-                        font-weight: 400 !important;
-                    }
-                    div,
-                    span {
-                        transition: all 0.3s ease-in-out;
-                        &:hover {
-                            color: rgba(var(--rgb-white), 1);
-                        }
-                    }
-                    &:last-child {
-                        border-bottom: 0;
-                    }
+    }
+    .social {
+        display: flex;
+        align-items: center;
+        margin-left: auto;
+        ul {
+            display: flex;
+            gap: 10px;
+            li {
+                list-style: none;        
+                a, img {
+                    display: block;
                 }
-
-                .about-me {
-                    text-align: center;
+                a {
+                    opacity: 0.8;
                     img {
-                        border-radius: 50%;
-                        margin-top: 30px;
-                        margin-bottom: 10px;
+                        width: 25px;
+                        height: 25px;
                     }
-                    h3 {
-                        font-weight: 400;
-                        margin-bottom: 0;
-                    }
-                }
-
-                .tech-stack {
-                    display: flex;
-                    justify-content: center;
-                    flex-wrap: wrap;
-                    gap: 10px;
-                    span {
-                        display: block;
-                    }
-                }
-
-                .dev-tools {
-                    position: relative;
-                    text-align: center;
-                    div {
-                        display: inline-block;
-                        &:after {
-                            content: '';
-                            display: inline-block;
-                            width: 3px;
-                            height: 3px;
-                            border-radius: 50%;
-                            background-color: rgba(var(--rgb-white), 0.5);
-                            margin-left: 5px;
-                            transform: translateY(-3px);
-                        }
-                        &:last-child::after {
-                            display: none;
-                        }
+                    &:hover {
+                        opacity: 1;
                     }
                 }
             }
+        }
+    }
+}
+
+#section-1 {
+    text-align: center;
+    padding-top: 30px;
+    padding-bottom: 30px;
+
+    .mac-desktop {
+        position: relative;
+        background-color: rgba(var(--rgb-primary), 0.5);
+        border: 1px solid rgba(var(--rgb-white), 0.1);
+        padding: 150px 0;
+        border-radius: 15px;
+        overflow: hidden;
+        z-index: 0;
+        span, li, h2 {
+            text-shadow: 0 0 20px rgba(var(--rgb-primary), 1);
+        }
+        h1 {
+            font-size: 72px;
+            line-height: 1em;
+            margin-bottom: 0;
+            span {
+                cursor: pointer;
+                display: inline-block;
+                transform: translateY(0);
+                &:hover {
+                    color: rgba(var(--rgb-secondary), 1);
+                    transform: translateY(-5px);
+                }
+            }
+            .trigger-0 {
+                &:hover {
+                    color: red;
+                }
+            }
+        }
+        h2 {
+            font-size: 40px;
+            font-weight: 300;
+            text-transform: uppercase;
+            letter-spacing: 0.25em;
+        }
+        p {
+            font-size: 24px;
+            font-weight: 700;
+        }
+        ul {
+            display: flex;
+            gap: 10px;
+            justify-content: center;
+            margin-top: 50px;
+            li {
+                list-style: none;
+                color: var(--hex-white);
+            }
+        }
+        &:before {
+            content: '';
+            position: absolute;
+            left: -10%;
+            bottom: -15%;
+            width: 50%;
+            height: 100%;
+            border-radius: 50%;
+            background-image: linear-gradient(45deg, rgb(51, 10, 235), rgba(255, 0, 191, 0.3));
+            z-index: -2;
+            filter: blur(100px);
+            &:hover {
+                left: -15%;
+                bottom: -20%;
+            }
+        }
+        &:after {
+            content: '';
+            position: absolute;
+            right: -10%;
+            top: -15%;
+            width: 50%;
+            height: 100%;
+            border-radius: 50%;
+            background-image: linear-gradient(45deg, rgba(255, 0, 191, 0.3), rgb(51, 10, 235));
+            z-index: -2;
+            filter: blur(100px);
+            &:hover {
+                right: -15%;
+                top: -20%;
+            }
+        }
+    }
+}
+
+@media screen and (max-width:767px) {
+    .gradient-bg {
+        .gradient-1 {
+            filter: blur(100px);
+        }
+        .gradient-2 {
+            filter: blur(100px);
+        }
+        .gradient-3 {
+            filter: blur(100px);
         }
     }
 }
 
 @supports (-webkit-backdrop-filter: none) or (backdrop-filter: none) {
+    header,
     .glass-blur {
         -webkit-backdrop-filter: blur(10px);
         backdrop-filter: blur(10px);
