--- a/style.scss
+++ b/style.scss
@@ -1,9 +1,10 @@
 :root {
     --hex-primary: #0F172A;
+    --hex-primary-lite: #374361;
     --hex-secondary: #EAB308;
     --hex-accent: #ff00bf;
-    --hex-white: #fff;
     --hex-black: #000;
+    --hex-white: #fff;
     --rgb-primary: 15, 23, 42;
     --rgb-secondary: 234, 179, 8;
     --rgb-accent: 255, 0, 191;
@@ -15,7 +16,6 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    transition: all 0.3s ease-in-out;
 }
 
 html {
@@ -25,6 +25,10 @@ html {
 }
 
 body {
+    position: fixed;
+    display: flex;
+    width: 100%;
+    height: 100%;
     color: rgba(var(--rgb-white), 1);
     font-family: 'Inter', sans-serif;
     font-size: 14px;
@@ -85,165 +89,71 @@ a {
 }
 
 .wrapper {
-    position: relative;
-    width: 90%;
-    max-width: 1080px;
+    width: 100%;
+    height: 100%;
     margin: 0 auto;
     z-index: 9;
+    display: flex;
+    flex-direction: column;
+    align-content: space-between;
+    gap: 20px;
+    padding: 20px;
 }
 
-header {
-    background-color: rgba(var(--rgb-primary), 0.5);
-    border: 1px solid rgba(var(--rgb-white), 0.1);
+#command-output {
+    height: 100%;
+    padding: 20px;
+    border: 1px solid var(--hex-primary-lite);
+    border-radius: 10px;
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
+
+#command-line {
+    border: 1px solid var(--hex-primary-lite);
     border-radius: 10px;
     padding: 20px;
-    margin-top: 20px;
     display: flex;
+    flex-direction: row;
+    gap: 15px;
+    justify-content: space-between;
     align-items: center;
-    justify-content: flex-start;
-    .logo {
-        padding-right: 20px;
-        a, img {
-            display: block;
-        }
-        img {
-            width: 20px;
-            height: 20px;
-        }
-    }
-    nav {
-        display: inline-flex;
-        ul {
-            display: flex;
-            gap: 20px;
-            li {
-                list-style: none;
-                a {
-                    color: rgba(var(--rgb-white), 1);
-                    font-weight: 400;
-                    &:hover {
-                        color: rgba(var(--rgb-secondary), 1);
-                    }
-                }
-            }
-        }
-    }
-    .social {
+    .cmd-logo {
         display: flex;
-        align-items: center;
-        margin-left: auto;
-        ul {
-            display: flex;
-            gap: 10px;
-            li {
-                list-style: none;        
-                a, img {
-                    display: block;
-                }
-                a {
-                    opacity: 0.8;
-                    img {
-                        width: 25px;
-                        height: 25px;
-                    }
-                    &:hover {
-                        opacity: 1;
-                    }
-                }
-            }
-        }
     }
-}
-
-#section-1 {
-    text-align: center;
-    padding-top: 30px;
-    padding-bottom: 30px;
-
-    .mac-desktop {
-        position: relative;
-        background-color: rgba(var(--rgb-primary), 0.5);
-        border: 1px solid rgba(var(--rgb-white), 0.1);
-        padding: 150px 0;
-        border-radius: 15px;
-        overflow: hidden;
-        z-index: 0;
-        span, li, h2 {
-            text-shadow: 0 0 20px rgba(var(--rgb-primary), 1);
-        }
-        h1 {
-            font-size: 72px;
-            line-height: 1em;
-            margin-bottom: 0;
-            span {
-                cursor: pointer;
-                display: inline-block;
-                transform: translateY(0);
-                &:hover {
-                    color: rgba(var(--rgb-secondary), 1);
-                    transform: translateY(-5px);
-                }
-            }
-            .trigger-0 {
-                &:hover {
-                    color: red;
-                }
-            }
-        }
-        h2 {
-            font-size: 40px;
-            font-weight: 300;
-            text-transform: uppercase;
-            letter-spacing: 0.25em;
-        }
-        p {
+    .cmd-input-wrapper {
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        color: var(--hex-primary-lite);
+        span {
             font-size: 24px;
             font-weight: 700;
-        }
-        ul {
-            display: flex;
-            gap: 10px;
-            justify-content: center;
-            margin-top: 50px;
-            li {
-                list-style: none;
+            white-space: nowrap;
+            &:hover {
                 color: var(--hex-white);
+                cursor: help;
             }
         }
-        &:before {
-            content: '';
-            position: absolute;
-            left: -10%;
-            bottom: -15%;
-            width: 50%;
+        .cmd-input {
+            background-color: transparent;
             height: 100%;
-            border-radius: 50%;
-            background-image: linear-gradient(45deg, rgb(51, 10, 235), rgba(255, 0, 191, 0.3));
-            z-index: -2;
-            filter: blur(100px);
-            &:hover {
-                left: -15%;
-                bottom: -20%;
+            width: 100%;
+            color: var(--hex-white);
+            border: 0;
+            padding-left: 10px;
+            font-size: 18px;
+            &::placeholder {
+                color: var(--hex-primary-lite);
             }
-        }
-        &:after {
-            content: '';
-            position: absolute;
-            right: -10%;
-            top: -15%;
-            width: 50%;
-            height: 100%;
-            border-radius: 50%;
-            background-image: linear-gradient(45deg, rgba(255, 0, 191, 0.3), rgb(51, 10, 235));
-            z-index: -2;
-            filter: blur(100px);
-            &:hover {
-                right: -15%;
-                top: -20%;
-            }
+            &:focus {
+                outline: none;
+            } 
         }
     }
 }
+
+
 
 @media screen and (max-width:767px) {
     .gradient-bg {
