--- a/style.css
+++ b/style.css
@@ -169,6 +169,9 @@ a {
   border: 0;
   color: var(--hex-secondary);
 }
+#command-line .cmd-submit-wrapper button:focus {
+  color: var(--hex-white);
+}
 
 @media screen and (max-width: 767px) {
   .gradient-bg .gradient-1 {
