--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,6 +47,11 @@ p {
   color: var(--color-2);
   font-weight: 400;
   line-height: 1.7em;
+  margin-bottom: 20px;
+}
+
+p:last-child {
+  margin-bottom: 0;
 }
 
 /* Preloader Style */
@@ -236,6 +241,13 @@ section:not(#shadow-host-companion) {
 #b-sec-2 .content {
   text-align: center;
 }
+
+#b-sec-2 .content .logos {
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+}
+
 
 
 @media screen and (max-width: 980px) {
